[package]
name = "redis"
version = "1.0.0"
authors = ["vh012"]
edition = "2024"
rust-version = "1.91"

[dependencies]
bytes = "1.3.0"
thiserror = "2.0.18"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3"
clap = { version = "4.5.54", features = ["derive"] }
